# nns-dapp

./: ,notes  .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierrc.json  AGENTS.md  BUILD.md  CHANGELOG-Nns-Dapp-unreleased.md  CHANGELOG-Nns-Dapp.md  CHANGELOG-Sns_Aggregator.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.test  HACKING.md  HOWTO.md  LOCKOUT.md  PROPOSAL_TEMPLATE.md  PROPOSAL_TEMPLATE.sh  README.md  TESTING.md  build-asset.sh  build-backend.sh  build-config.json  build-config.sh  build-frontend.sh  build-rs.sh  build-sns-aggregator.sh  build.sh  canister_ids.default  canister_ids.json  canister_ids2.json  clippy.toml  compare-configs  config.json  config.mjs  config.sh  config.test  config.ts  (+17 more)
canisters/ledger_view/: Cargo.toml  ledger_view.did
canisters/ledger_view/src/: ledger_sync.rs  state.rs  transaction_store.rs
canisters/nns_ui/: Cargo.toml  nns_ui.did
canisters/nns_ui/src/: accounts_store.rs  assets.rs  canister_store.rs  ledger.rs  ledger_sync.rs  main.rs  memo_sync.rs  multi_part_transactions_processor.rs  periodic_tasks_runner.rs  state.rs  transaction_store.rs
canisters/nns_ui/src/accounts_store/: tests.rs
canisters/nns_ui/src/canisters/: governance.rs  ledger.rs  mod.rs
dfinity_wallet/rust_lib/cargo/: Cargo.toml
dfinity_wallet/rust_lib/cargo/src/: lib.rs
rs/: Cargo.toml  governance.did  nns-dapp.did
rs/backend/: Cargo.toml  README.md  nns-dapp-exports-noassets.txt  nns-dapp-exports-production.txt  nns-dapp-exports-test.txt  nns-dapp-exports.txt  nns-dapp.did
rs/backend/src/: accounts_store.rs  arguments.rs  assets.rs  candid_interface_test.rs  constants.rs  ledger_sync.rs  lib.rs  main.rs  memory.rs  metrics_encoder.rs  multi_part_transactions_processor.rs  perf.rs  periodic_tasks_runner.rs  proposals.rs  schema.rs  spawn.rs  state.rs  stats.rs  time.rs  timer.rs  tvl.rs
rs/backend/src/accounts_store/: constructors.rs  histogram.rs  schema.rs  tests.rs  toy_data.rs
rs/backend/src/accounts_store/histogram/: tests.rs
rs/backend/src/accounts_store/schema/: accounts_in_stable_memory.rs  accounts_in_stable_memory_v2.rs  accounts_in_unbounded_stable_btree_map.rs  label_serialization.rs  map.rs  proxy.rs  s0.rs  s1.rs  s1_mock.rs  tests.rs
rs/backend/src/accounts_store/schema/accounts_in_stable_memory/: mock.rs
rs/backend/src/accounts_store/schema/label_serialization/: tests.rs
rs/backend/src/accounts_store/schema/proxy/: enum_boilerplate.rs  migration.rs  tests.rs
rs/backend/src/assets/: upload.rs
rs/backend/src/canisters/: cmc.rs  exchange_rate_canister.rs  governance.rs  ledger.rs  mod.rs  swap.rs  xrc.rs
rs/backend/src/perf/: tests.rs
rs/backend/src/proposals/tests/: args.rs  mod.rs
rs/backend/src/schema/: s0.rs
rs/backend/src/schema/s0/: tests.rs
rs/backend/src/state/: in_raw_memory.rs  in_virtual_memory_map.rs  partitions.rs  tests.rs  with_accounts_in_stable_memory.rs  with_heap_in_virtual_memory.rs  with_raw_memory.rs
rs/backend/src/state/partitions/: schemas.rs  tests.rs
rs/backend/src/stats/: tests.rs
rs/backend/src/tvl/: state.rs  tests.rs
rs/backend/tests/: migration.rs
rs/nns_functions_candid_gen/: Cargo.toml  README.md
rs/nns_functions_candid_gen/src/: main.rs  payloads.rs
rs/proposals/: Cargo.toml  HACKING.md  README.md
rs/proposals/src/: def.rs  lib.rs  main.rs
rs/proposals/src/canisters/: governance.rs  internet_identity.rs  make.sh  mod.rs  nns_cmc.rs  nns_governance.rs  nns_registry.rs  nns_root.rs  sns_wasm.rs
rs/proposals/src/canisters/cmc/: api.rs  internal.rs  mod.rs
rs/proposals/src/canisters/governance/: api.rs  internal.rs
rs/proposals/src/canisters/nns_cmc/: api.rs
rs/proposals/src/canisters/nns_governance/: api.rs  internal.rs
rs/proposals/src/canisters/nns_registry/: api.rs  internal.rs
rs/proposals/src/canisters/nns_root/: api.rs  internal.rs
rs/proposals/src/canisters/sns_wasm/: api.rs
rs/proposals/src/tests/: args.rs  mod.rs  payloads.rs
rs/proposals/src/tests/payloads/: nns_function_02.rs  nns_function_11.rs  nns_function_20.rs  nns_function_23.rs  nns_function_40.rs  nns_function_41.rs
rs/sns_aggregator/: Cargo.toml  build.sh  sns_aggregator.did
rs/sns_aggregator/src/: assets.rs  candid_interface_test.rs  conversion.rs  fast_scheduler.rs  index.html  lib.rs  state.rs  types.rs  update_scheduler.rs  upstream.rs
rs/sns_aggregator/src/state/: sample_latest.json  stable_data.json  tests.rs
rs/sns_aggregator/src/tests/: mod.rs
rs/sns_aggregator/src/types/: NOTES  did2rs.sh  ic_sns_governance.edit  ic_sns_governance.patch  ic_sns_governance.rs  ic_sns_ledger.patch  ic_sns_ledger.rs  ic_sns_ledger.rs.orig  ic_sns_ledger.rs.rej  ic_sns_root.edit  ic_sns_root.patch  ic_sns_root.rs  ic_sns_swap.edit  ic_sns_swap.patch  ic_sns_swap.rs  ic_sns_swap.rs.orig  ic_sns_wasm.edit  ic_sns_wasm.patch  ic_sns_wasm.rs  mkpatch.rs  other.rs  slow.rs  state.rs  upstream.rs
rs/sns_cache/: Cargo.toml  build.sh
rs/sns_cache/src/: assets.rs  lib.rs  types.rs  upstream.rs
rs/sns_cache/src/types/: NOTES  did2rs.sh  ic_icrc1.patch  ic_icrc1.rs  ic_icrc1.sh  ic_sns_governance.patch  ic_sns_governance.rs  ic_sns_governance.sh  ic_sns_ledger.patch  ic_sns_ledger.rs  ic_sns_root.patch  ic_sns_root.rs  ic_sns_root.sh  ic_sns_swap.patch  ic_sns_swap.rs  ic_sns_swap.sh  ic_sns_wasm.patch  ic_sns_wasm.rs  ic_sns_wasm.sh  mk_nns_types.sh  mkpatch.sh  slow.rs  sns_ledger.patch
rs/src/: accounts_store.rs  assets.rs  cached_known_neurons.rs  certification.rs  constants.rs  ledger_sync.rs  main.rs  metrics_encoder.rs  multi_part_transactions_processor.rs  periodic_tasks_runner.rs  proposals.rs  state.rs  time.rs
rs/src/accounts_store/: tests.rs
rs/src/canisters/: cmc.rs  governance.rs  ledger.rs  mod.rs  swap.rs
rs/src/canisters/xrc/: canister.rs  constants.rs
rs/src/canisters/xrd/: candid.rs  canister.rs  constants.rs  mod.rs
rs/src/dashboard/: impls.rs  lib.rs  mod.rs  types.rs
rs/src/proposals/: payloads.rs  tests.rs
rs/src/proposals/payloads/: nns_function_07.rs
rs/src/proposals/tests/payloads/: nns_function_04.rs  nns_function_16.rs
(+5963 files in other folders)
