[workspace]
members = [
    "rs/backend",
    "rs/sns_aggregator"
]
resolver = "2"

[workspace.package]
version = "2.0.146"

[workspace.dependencies]
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0.0"
ic-management-canister-types = "0.8.0"

cycles-minting-canister = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
dfn_candid = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
dfn_protobuf = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
ic-ledger-core = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }
on_wire = { git = "https://github.com/dfinity/ic", rev = "release-2026-06-04_04-52-canister-logging" }

[profile.release]
lto = false
opt-level = "z"
codegen-units = 1

[profile.release.package.ic-nns-governance]
opt-level = 3
