[workspace]
members = [
    "rs/backend",
    "rs/sns_aggregator"
]
resolver = "2"

[workspace.package]
version = "2.0.147"

[workspace.dependencies]
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0.0"
ic-management-canister-types = "0.8.0"

cycles-minting-canister = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
dfn_candid = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
dfn_protobuf = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
ic-ledger-core = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }
on_wire = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-02_07-40-base" }

[profile.release]
lto = false
opt-level = "z"
codegen-units = 1

[profile.release.package.ic-nns-governance]
opt-level = 3
