[workspace]
members = [
    "rs/backend",
    "rs/sns_aggregator"
]
resolver = "2"

[workspace.package]
version = "2.0.148"

[workspace.dependencies]
ic-cdk = "0.19.0"
ic-cdk-timers = "1.0.0"
ic-management-canister-types = "0.8.0"

cycles-minting-canister = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
dfn_candid = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
dfn_protobuf = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
ic-ledger-core = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }
on_wire = { git = "https://github.com/dfinity/ic", rev = "release-2026-07-17_04-19-deterministic-tracker" }

[profile.release]
lto = false
opt-level = "z"
codegen-units = 1

[profile.release.package.ic-nns-governance]
opt-level = 3
