[package]
name = "nns-dapp"
version = "2.0.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
candid = "0.8.1"
futures = "0.3.21"
itertools = "0.10.0"
lazy_static = "1.4.0"
serde = "1.0.136"
serde_bytes = "0.11.5"
serde_cbor = "0.11.2"
serde_json = "1.0.81"
sha2 = "0.9.1"
lzma-rs = "0.2.0"
tar = "0.4.37"
hex = "0.4.3"

# chrono 0.4.19 has vulnerabilities fixed in 0.4.20
# but, 0.4.20 doesn't satisfy ic. We get the followig error when deploying the canister:
# The Replica returned an error: code 5, message: "Wasm module of canister vo5te-2aaaa-aaaaa-aaazq-cai is not valid: Wasm module has an invalid import section. Module imports function '__wbindgen_describe' from '__wbindgen_placeholder__' that is not exported by the runtime."
# 0.4.19 works and satisfies ic. 
chrono = "=0.4.19"

cycles-minting-canister = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
dfn_candid = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
dfn_core = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
dfn_json = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
dfn_macro = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
dfn_protobuf = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-certified-map = { git = "https://github.com/dfinity/cdk-rs", rev = "7676e7f"}
ic-crypto-sha = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-ic00-types = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-ledger-core = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-nervous-system-root = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-protobuf = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ic-sns-wasm = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
on_wire = { git = "https://github.com/dfinity/ic", rev = "a3608ed7cf64a01dcdb82486deb7aaa25d768787" }
# Registry canister deploy as of 2022-11-23, ahead of Blessed Replica Version
registry-canister = { git = "https://github.com/dfinity/ic", rev = "d3cb3391ace07c3a9d42f4ff538c0e300990aae0" }

[dev-dependencies]
maplit = "1.0.2"

[features]
mock_conversion_rate = []
