[package]
name = "ledger_view"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.6.15"
getrandom = { version = "0.2.2", features = ["js"] }
itertools = "0.10.0"
lazy_static = "1.4.0"
serde = "1.0"

dfn_candid = { git = "ssh://github.com/dfinity-lab/dfinity", rev = "439c8df42c23dd41484ac1287d0da72ea250a843" }
dfn_core = { git = "ssh://github.com/dfinity-lab/dfinity", rev = "439c8df42c23dd41484ac1287d0da72ea250a843" }
dfn_json = { git = "ssh://github.com/dfinity-lab/dfinity", rev = "439c8df42c23dd41484ac1287d0da72ea250a843" }
dfn_macro = { git = "ssh://github.com/dfinity-lab/dfinity", rev = "439c8df42c23dd41484ac1287d0da72ea250a843" }
dfn_protobuf = { git = "ssh://github.com/dfinity-lab/dfinity", rev = "439c8df42c23dd41484ac1287d0da72ea250a843" }
ic-base-types = { git = "ssh://github.com/dfinity-lab/dfinity", rev = "439c8df42c23dd41484ac1287d0da72ea250a843" }
ic-nns-constants = { git = "ssh://github.com/dfinity-lab/dfinity", rev = "439c8df42c23dd41484ac1287d0da72ea250a843" }
ledger-canister = { git = "ssh://github.com/dfinity-lab/dfinity", rev = "439c8df42c23dd41484ac1287d0da72ea250a843" }
on_wire = { git = "ssh://github.com/dfinity-lab/dfinity", rev = "439c8df42c23dd41484ac1287d0da72ea250a843" }
