[package]
name = "nns_ui"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
candid = "0.6.15"
getrandom = { version = "0.2.2", features = ["js"] }
itertools = "0.10.0"
lazy_static = "1.4.0"
serde = "1.0"
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "0.9.1"
lzma-rs = "0.2.0"
tar = "0.4.33"

dfn_candid = { git = "https://github.com/dfinity/ic", rev = "024de2fc73d7f6f5df5a92edf9675851f9ebbf59" }
dfn_core = { git = "https://github.com/dfinity/ic", rev = "024de2fc73d7f6f5df5a92edf9675851f9ebbf59" }
dfn_json = { git = "https://github.com/dfinity/ic", rev = "024de2fc73d7f6f5df5a92edf9675851f9ebbf59" }
dfn_macro = { git = "https://github.com/dfinity/ic", rev = "024de2fc73d7f6f5df5a92edf9675851f9ebbf59" }
dfn_protobuf = { git = "https://github.com/dfinity/ic", rev = "024de2fc73d7f6f5df5a92edf9675851f9ebbf59" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "024de2fc73d7f6f5df5a92edf9675851f9ebbf59" }
ic-certified-map = { git = "https://github.com/dfinity/cdk-rs", rev = "7676e7f"}
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "024de2fc73d7f6f5df5a92edf9675851f9ebbf59" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "024de2fc73d7f6f5df5a92edf9675851f9ebbf59" }
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "024de2fc73d7f6f5df5a92edf9675851f9ebbf59" }
on_wire = { git = "https://github.com/dfinity/ic", rev = "024de2fc73d7f6f5df5a92edf9675851f9ebbf59" }
