[package]
name = "nns-dapp"
version = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
candid = "0.9.11"
flate2 = "1.0.28"
futures = "0.3.29"
hex = "0.4.3"
itertools = "0.12.0"
lazy_static = "1.4.0"
lzma-rs = "0.3.0"
regex = "1.10.2"
serde = "1.0.193"
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
sha2 = "0.10.8"
strum = "0.25.0"
strum_macros = "0.25.3"
tar = "0.4.40"

# chrono 0.4.19 has vulnerabilities fixed in 0.4.20
# but, 0.4.20 doesn't satisfy ic. We get the followig error when deploying the canister:
# The Replica returned an error: code 5, message: "Wasm module of canister vo5te-2aaaa-aaaaa-aaazq-cai is not valid: Wasm module has an invalid import section. Module imports function '__wbindgen_describe' from '__wbindgen_placeholder__' that is not exported by the runtime."
# 0.4.19 works and satisfies ic.
chrono = "=0.4.19"

cycles-minting-canister = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
dfn_candid = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
dfn_core = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
dfn_protobuf = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-certified-map = "0.3.4" # == https://github.com/dfinity/cdk-rs 6a15aa1616bcfdfdc4c120d17d37a089f5700c36
ic-crypto-sha = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
ic-ledger-core = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
ic-nns-common = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
ic-stable-structures = "0.6.0"
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }
on_wire = { git = "https://github.com/dfinity/ic", rev = "89129b8212791d7e05cab62ff08eece2888a86e0" }

proposals = { path = "../proposals" }

[dev-dependencies]
anyhow = "1.0.75"
maplit = "1.0.2"

[features]
# Build flavours; these should not normally be referred to directly in code.
production = ["assets"]
test = ["assets", "toy_data_gen"]
noassets = ["toy_data_gen"]

# Individual features
assets = []
toy_data_gen = []
