[package]
name = "nns-dapp"
version = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
candid = "0.10.10"
flate2 = "1.0.30"
futures = "0.3.30"
hex = "0.4.3"
itertools = "0.13.0"
lazy_static = "1.5.0"
lzma-rs = "0.3.0"
regex = "1.10.6"
serde = "1.0.208"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
sha2 = "0.10.8"
strum = "0.26.3"
strum_macros = "0.26.4"
tar = "0.4.40"

cycles-minting-canister = { workspace = true }
dfn_candid = { workspace = true }
dfn_core = { workspace = true }
dfn_protobuf = { workspace = true }
ic-base-types = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-certified-map = "0.3.4" # == https://github.com/dfinity/cdk-rs 6a15aa1616bcfdfdc4c120d17d37a089f5700c36
ic-crypto-sha2 = { workspace = true }
ic-ledger-core = { workspace = true }
ic-nns-common = { workspace = true }
ic-nns-constants = { workspace = true }
ic-nns-governance = { workspace = true }
ic-sns-swap = { workspace = true }
ic-stable-structures = "0.6.5"
icp-ledger = { workspace = true }
on_wire = { workspace = true }

proposals = { path = "../proposals" }

[dev-dependencies]
anyhow = "1.0.86"
candid_parser = "0.1.2"
ic_principal = "0.1.0"
maplit = "1.0.2"
pocket-ic = "4.0.0"
pretty_assertions = "1.4.0"
proptest = "1.5.0"
rand = "0.8.5"

[features]
# Build flavours; these should not normally be referred to directly in code.
production = ["assets"]
test = ["assets", "toy_data_gen"]
noassets = ["toy_data_gen"]

# Individual features
assets = []
toy_data_gen = []
