[package]
name = "nns_functions_candid_gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.10"
candid_derive = "0.4.5"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "42a4bc4b7917a44c58c9cf907d84b9fd8e908ed9" }
ic-registry-subnet-type = { git = "https://github.com/dfinity/ic", rev = "42a4bc4b7917a44c58c9cf907d84b9fd8e908ed9" }
serde = "1.0.136"

[build-dependencies]
prost-build = "0.7.0"
