[package]
name = "nns_functions_candid_gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
candid_derive = "0.4.5"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "c273e3a8516fbced2ae8824ca9b2ff97bdb177ec" }
ic-registry-subnet-type = { git = "https://github.com/dfinity/ic", rev = "c273e3a8516fbced2ae8824ca9b2ff97bdb177ec" }
serde = "1.0.136"

[build-dependencies]
prost-build = "0.7.0"
