[package]
name = "nns_functions_candid_gen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.7.14"
candid_derive = "0.4.5"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "5b2647754d0c2200b645d08a6ddce32251438ed5" }
ic-registry-subnet-type = { git = "https://github.com/dfinity/ic", rev = "5b2647754d0c2200b645d08a6ddce32251438ed5" }
serde = "1.0.136"

[build-dependencies]
prost-build = "0.7.0"
