[package]
name = "proposals"
edition = "2021"
version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.1"
hex = "0.4.3"
serde = "1.0.193"
serde_bytes = "0.11.12"
serde_json = "1.0.108"

cycles-minting-canister = { git = "https://github.com/dfinity/ic", rev = "2bc1a2bef3c9e5ec5e15da11e1f46531b3daa063" }
dfn_candid = { git = "https://github.com/dfinity/ic", rev = "2bc1a2bef3c9e5ec5e15da11e1f46531b3daa063" }
dfn_core = { git = "https://github.com/dfinity/ic", rev = "2bc1a2bef3c9e5ec5e15da11e1f46531b3daa063" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "2bc1a2bef3c9e5ec5e15da11e1f46531b3daa063" }
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "b1693619e3d4dbc00d8c79e9b6886e1db48b21f7" }
ic-crypto-sha2 = { git = "https://github.com/dfinity/ic", rev = "2bc1a2bef3c9e5ec5e15da11e1f46531b3daa063" }
ic-ic00-types = { git = "https://github.com/dfinity/ic", rev = "2bc1a2bef3c9e5ec5e15da11e1f46531b3daa063" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic", rev = "2bc1a2bef3c9e5ec5e15da11e1f46531b3daa063" }
ic-nervous-system-root = { git = "https://github.com/dfinity/ic", rev = "2bc1a2bef3c9e5ec5e15da11e1f46531b3daa063" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "2bc1a2bef3c9e5ec5e15da11e1f46531b3daa063" }
ic-protobuf = { git = "https://github.com/dfinity/ic", rev = "2bc1a2bef3c9e5ec5e15da11e1f46531b3daa063" }

ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
idl2json = "0.8.7"

[dev-dependencies]
anyhow = "1.0.75"
pretty_assertions = "1.4.0"
