[package]
name = "proposals"
edition = "2021"
version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.1"
hex = "0.4.3"
serde = "1.0.193"
serde_bytes = "0.11.12"
serde_json = "1.0.108"

cycles-minting-canister = { workspace = true }
dfn_candid = { workspace = true }
dfn_core = { workspace = true }
ic-btc-interface = { git = "https://github.com/dfinity/bitcoin-canister", rev = "b1693619e3d4dbc00d8c79e9b6886e1db48b21f7" }
ic-crypto-sha2 = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-nervous-system-common = { workspace = true }
ic-nervous-system-root = { workspace = true }
ic-nns-constants = { workspace = true }
ic-protobuf = { workspace = true }

ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
idl2json = "0.8.7"

[dev-dependencies]
anyhow = "1.0.75"
pretty_assertions = "1.4.0"
