[package]
name = "proposals"
edition = "2021"
version = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.10.10"
candid_parser = "0.1.4"
hex = "0.4.3"
ic_principal = "0.1.1"
serde = "1.0.217"
serde_bytes = "0.11.15"
serde_json = "1.0.137"

cycles-minting-canister = { workspace = true }
dfn_candid = { workspace = true }
dfn_core = { workspace = true }
ic-base-types = { workspace = true }
ic-btc-interface = "0.2.0"
ic-crypto-sha2 = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-nervous-system-common = { workspace = true }
ic-nervous-system-root = { workspace = true }
ic-nns-constants = { workspace = true }
ic-protobuf = { workspace = true }

ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
idl2json = "0.10.1"

[dev-dependencies]
anyhow = "1.0.95"
pretty_assertions = "1.4.0"
