[package]
name = "sns_aggregator"
version = { workspace = true }
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
candid = "0.10.10"
dfn_candid = { workspace = true }
dfn_core = { workspace = true }
# This next candid is 0.9.0_beta code that fixes serde Nat but has other issues.  Keep checking until the issues are fixed.
#candid = { git = "https://github.com/dfinity/candid" , rev = "42ffed660ded37585c4b9f97e3ce90919e24c518" }
ic-cdk = { version = "0.15.1" }
ic-cdk-macros = { version = "0.15.0" }
ic-cdk-timers = "0.9.0"
ic-certified-map = { git = "https://github.com/dfinity/cdk-rs", rev = "58791941b72471e09e3d9e733f2a3d4d54e52b5a" }
ic-management-canister-types = { workspace = true }
ic-nervous-system-common = { workspace = true }
lazy_static = "1.5.0"
num-traits = "0.2.19"
serde = "1.0.206"
serde_bytes = "0.11.15"
serde_cbor = "0.11.2"
serde_derive = "1.0.126"
serde_json = "1.0.124"
sha2 = "0.10.8"

[dev-dependencies]
pretty_assertions = "1.4.0"

[features]
reconfigurable = []
