[package]
name = "sns_cache"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.0"
candid = "0.8.2"
ic-cdk = "0.6.7"
ic-cdk-macros = "0.6.7"
lazy_static = "1.4.0"
serde = "1.0.126"
serde_cbor = "0.11.2"
serde_derive = "1.0.126"
serde_bytes = "0.11.5"
serde_json = "1.0.91"
sha2 = "0.10.6"
anyhow = "1.0.68"

# TODO: Get these from the newer locations.
ic-certified-map = { git = "https://github.com/dfinity/cdk-rs", rev = "7676e7f"}


# These should be one entry here for each of sns_root, sns_ledger and so on.
# TODO: Derive these types from candid in the did file.
#ic-sns-wasm = { git = "https://github.com/dfinity/ic", rev = "226ab04e0984367da356bbe27c90447863d33a27" }
#ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "226ab04e0984367da356bbe27c90447863d33a27" }
#ic-sns-root = { git = "https://github.com/dfinity/ic", rev = "226ab04e0984367da356bbe27c90447863d33a27" }
ic-sns-wasm = { path = "/home/max/dfn/ic/branches/nns-serde/rs/nns/sns-wasm" }
ic-sns-swap = { path = "/home/max/dfn/ic/branches/nns-serde/rs/sns/swap" }
ic-sns-root = { path = "/home/max/dfn/ic/branches/nns-serde/rs/sns/root" }
# ic-sns-governance = { path = "/home/max/dfn/ic/branches/nns-serde/rs/sns/governance" }
ic-icrc1 = { path = "/home/max/dfn/ic/branches/nns-serde/rs/rosetta-api/icrc1" }
