[package]
name = "sns_cache"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.8.2"
ic-cdk = "0.6.7"
ic-cdk-macros = "0.6.7"
serde = "1.0.126"
serde_derive = "1.0.126"
