[package]
name = "cargo"
version = "0.1.0"
authors = ["Gilbert Jolly <gilbert@jollytechnologies.co.uk>"]
edition = "2018"
publish = false


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ic_signing"
crate-type = ["staticlib", "cdylib"]

[dependencies]
